Fixed bug that allowed you to activate silk arrow skill by left-clicking with any item